force-app/main/default/objects/Dummy08__c/Dummy08__c.object-meta.xml
<CustomObject>
    <label>Dummy08</label>
    <nameField>
        <label>Dummy08 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy08</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>