force-app/main/default/objects/Dummy08__c/fields/FooBar005__c.field-meta.xml
<CustomField>
    <fullName>FooBar005__c</fullName>
    <label>FooBar005</label>
    <length>255</length>
    <type>Text</type>
</CustomField>