force-app/main/default/objects/Dummy08__c/fields/FooBar033__c.field-meta.xml
<CustomField>
    <fullName>FooBar033__c</fullName>
    <label>FooBar033</label>
    <length>255</length>
    <type>Text</type>
</CustomField>