force-app/main/default/objects/Dummy08__c/fields/FooBar082__c.field-meta.xml
<CustomField>
    <fullName>FooBar082__c</fullName>
    <label>FooBar082</label>
    <length>255</length>
    <type>Text</type>
</CustomField>